simplify code
Signed-off-by: stefan.pingel@consensys.net <stefan.pingel@consensys.net>